Ajout de SQ_EXPORT_SPARK_FT_A_VAS_REVENUE_DAILY dans le sqoop crontask ainsi que le fichier de conf, modification du sqoop exprt ft_a_gprs_activity et ft_gsm_trafic_revenue_daily

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -140,7 +140,7 @@ crontasks +=
 // // EXPORT FT_A_GPRS_ACTIVITY
 crontasks +=
   {
-    instanceId = "SQ_SPARK_EXPORT_FT_A_GPRS_ACTIVITY",
+    instanceId = "SQ_EXPORT_SPARK_FT_A_GPRS_ACTIVITY",
     cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-gprs-activity.conf",
     taskType = "SQOOP",
@@ -249,6 +249,23 @@ crontasks +=
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-msisdn-recyclage.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+//  EXPORT sqoop-export-spark-fta-msisdn-recyclage.conf
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_A_VAS_REVENUE_DAILY",
+    cron = "0 35 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-vas-revenue-daily.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
