create CBM AGGREGAT

--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -64,3 +64,4 @@ flux.exec-queries += "/PROD/SCRIPTS/IT/BDI/BDI_FINALE/insert_values_into_tt_bdi_
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI/BDI_FINALE/insert_multisim_into_spark_it_bdi_flotte.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI/BDI_FINALE/insert_into_spark_it_bdi_flotte_multitism_generique.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI/BDI_FINALE/insert_into_spark_it_bdi.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_spark_it_bdi_fin_for_ft.hql"
