--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -593,3 +593,18 @@ crontasks +=
                      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
                    ]
                  }
+  crontasks +=
+    {
+      instanceId = "SQ_EXPORT_SPARK_FT_A_CBM_AGREGATt",
+      cron = "0 47 */1 * * ?",
+      configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-cbm-agregat.conf",
+      taskType = "SQOOP",
+      taskQueue = "compute",
+      taskLauncher = ${SQOOP_LAUNCHER}
+      timeout = "240 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+        , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+      ]
+    }
