create CBM AGGREGAT

--- a/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
+++ b/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
@@ -1,4 +1,4 @@
-flux.yarn.queue = "PROD"
+flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
 
 flux.input-type = "HIVE" // Possible values are HDFS, HIVE
@@ -11,7 +11,7 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-
+flux.spark.setup-conf += {"key": "spark.sql.session.timeZon","value": "UTC"}
 
 flux.name = "LOAD_SPARK_IT_VAS_RETRAILLER_IRIS"
 
