--- a/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-site-360.conf
+++ b/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-site-360.conf
@@ -48,4 +48,5 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/SITE_360/prequery_spark_ft_site_360.h
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=false"
 flux.inline.exec-queries += "set hive.auto.convert.join=false"
 
+flux.exec-queries += "/PROD/SCRIPTS/FT/SITE_360/compute_and_insert_into_spark_tmp_site_360.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/SITE_360/compute_and_insert_into_spark_ft_site_360.hql"
