--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -2965,54 +2965,54 @@ crontasks +=
   }
 
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_SPARK_FT_CELL_360",
-//    cron = "0 20 */1 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-cell-360.conf",
-//    taskType = "BATCH",
-//     taskQueue = "compute",
-//    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-//    timeout = "50 minutes"
-//    extraTaskParams : [
-//      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 10G --executor-memory 10G"}
-//      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-//      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-//      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-//      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-//      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-//      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-//      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-//      , {"param" : "--conf spark.network.timeout=360s"}
-//      , {"param" : "--conf spark.ui.port=50808"}
-//      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_CELL_360",
+    cron = "0 20 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-cell-360.conf",
+    taskType = "BATCH",
+     taskQueue = "compute",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 10G --executor-memory 10G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50808"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
 
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_SPARK_FT_SITE_360",
-//    cron = "0 30 */1 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-site-360.conf",
-//    taskType = "BATCH",
-//     taskQueue = "compute",
-//    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-//    timeout = "50 minutes"
-//    extraTaskParams : [
-//      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 10G --executor-memory 10G"}
-//      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-//      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-//      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-//      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-//      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-//      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-//      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-//      , {"param" : "--conf spark.network.timeout=360s"}
-//      , {"param" : "--conf spark.ui.port=50809"}
-//      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_SITE_360",
+    cron = "0 30 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-site-360.conf",
+    taskType = "BATCH",
+     taskQueue = "compute",
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 10G --executor-memory 10G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50809"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
 
 
 //crontasks +=
@@ -3021,7 +3021,7 @@ crontasks +=
 //    cron = "0 30 4 * * ?",
 //    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-subscriber-summary-b2b.conf",
 //    taskType = "BATCH",
-     taskQueue = "compute",
+//    taskQueue = "compute",
 //    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
 //    timeout = "50 minutes"
 //    extraTaskParams : [
