--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-marketing-datamart_daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-marketing-datamart_daily.conf
@@ -1,19 +1,19 @@
 flux.yarn.queue = "compute"
 flux.log-level = "ERROR"
 
-flux.name = "SQ_EXPORT_SPARK_FT_A_REFILL_RECEIVER"
+flux.name = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART"
 
 flux.type = "EXPORT"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "MONTHLY"
-flux.slice-begin-value = -3
+flux.slice-value-type = "DAILY"
+flux.slice-begin-value = -14
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-date-format = "yyyy-MM"
+flux.slice-date-format = "yyyy-MM-dd"
 
 flux.rdms.has-pre-queries = true
 
@@ -21,11 +21,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM FT_A_REFILL_RECEIVER WHERE refill_month = REGEXP_REPLACE('###SLICE_VALUE###', '-', ''))
+(SELECT COUNT(*) NBR FROM MON.FT_A_MARKETING_DATAMART_DAILY WHERE event_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM AGG.SPARK_FT_A_REFILL_RECEIVER WHERE refill_month='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM MON.SPARK_FT_A_MARKETING_DATAMART_DAILY WHERE event_date='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.95.20)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,13 +33,15 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = " SELECT * FROM AGG.SPARK_FT_A_REFILL_RECEIVER WHERE refill_month='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT * FROM AGG.SPARK_FT_A_MARKETING_DATAMART_DAILY WHERE EVENT_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_REFILL_RECEIVER"
-flux.sqoop.export-rdms.dest-table = "FT_A_REFILL_RECEIVER"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_REFILL_RECEIVER"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_MARKETING_DATAMART_DAILY"
+flux.sqoop.export-rdms.dest-table = "MON.FT_A_MARKETING_DATAMART_DAILY"
+flux.sqoop.export-hive.staging-table = "FT_A_TMP_MARKETING_DATAMART_DAILY"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
+
+
 
