--- a/PROD/CONF/IN_ZTE/CBM/CBM_AGREGAT/load-spark-ft-cbm-mou-arpu.conf
+++ b/PROD/CONF/IN_ZTE/CBM/CBM_AGREGAT/load-spark-ft-cbm-mou-arpu.conf
@@ -4,15 +4,13 @@ flux.spark.setup-conf = []
 flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-
-
 flux.spark.setup-var +=  {"key": "cdr_type","value": "ZTE_ADJUSTMENT_CDR"}
 flux.spark.setup-var +=  {"key": "date_offset","value": "7"}
 flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_ADJUSTMENT"}
 flux.spark.setup-var +=  {"key": "it_partition_column","value": "FILE_DATE"}
 flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
-flux.name = "LOAD_SPARK_FT_A_CBM_AGREGAT"
+flux.name = "LOAD_SPARK_FT_CBM_MOU_ARPU"
 flux.has-date-processing = true
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -90
@@ -26,7 +24,7 @@ select
     if(count(*)=90,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 90) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from AGG.SPARK_FT_A_CBM_AGREGAT where event_date between date_sub(current_date, 90) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_CBM_MOU_ARPU where event_date between date_sub(current_date, 90) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -34,16 +32,16 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 90) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from AGG.SPARK_FT_A_CBM_AGREGAT where event_date between date_sub(current_date, 90) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_CBM_MOU_ARPU where event_date between date_sub(current_date, 90) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_AGREGAT/prequery_spark_ft_a_cbm_agregat.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_ARPU_MOU/prequery_spark_ft_cbm_mou_arpu.hql"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
-flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_AGREGAT/compute_and_insert_into_spark_ft_a_cbm_agregat.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_ARPU_MOU/compute_and_insert_into_ft_cbm_mou_arpu.hql"
