update load ref sites

--- a/PROD/CONF/REF/load-spark-it-ref-sites.conf
+++ b/PROD/CONF/REF/load-spark-it-ref-sites.conf
@@ -28,17 +28,21 @@ flux.hdfs.dest.arch-dir = "/PROD/ARCH/REF_SITES"
 flux.hdfs.dest.has-sub-dir = false
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
-flux.has-pre-queries = false
+flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
+
+
+flux.inline.pre-exec-queries += "SELECT IF(COUNT_TT>20000,'OK','NOK' ) STATUS FROM (SELECT COUNT(*) COUNT_TT  FROM CDR.tt_dim_ref_sites) a"
+
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
+flux.inline.exec-queries += "truncate table dim.spark_dt_gsm_cell_code"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/REF/REF_SITES/insert_into_spark_it_ref_sites.hql"
-
-
+flux.exec-queries += "/PROD/SCRIPTS/IT/REF/REF_SITES/insert_into_spark_dt_gsm_cell_code.hql"
 
