--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-dola-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-dola-daily.conf
@@ -3,19 +3,9 @@ flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
+
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
-
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_CBM_DOLA_DAILY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_CBM_DOLA_DAILY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "EVENT_DATE"}
 
 flux.name = "LOAD_SPARK_FT_CBM_DOLA_DAILY"
 
@@ -29,8 +19,8 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(*)=7,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
     and datecode in (select distinct event_date from mon.SPARK_FT_CBM_DOLA_DAILY where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
@@ -53,22 +43,13 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/prequery_spark_ft_cbm_dola_daily.hql"
 
-
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.spark_TT_FT_CBM_DOLA_DAILY_PRE"
+
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part3.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_spark_ft_cbm_dola_daily_part4.hql"
-
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-
-
