--- a/PROD/CONF/DD/load-spark-ft-activation-by-identif-day.conf
+++ b/PROD/CONF/DD/load-spark-ft-activation-by-identif-day.conf
@@ -18,7 +18,7 @@ select
     if(count(*)=90,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 90) and date_sub(current_date, 1)
-    and datecode in (select distinct refill_date from mon.SPARK_FT_ACTIVATION_BY_IDENTIF_DAY where refill_date between date_sub(current_date, 90) and date_sub(current_date, 1))
+    and datecode in (select distinct activation_date from mon.SPARK_FT_ACTIVATION_BY_IDENTIF_DAY where activation_date between date_sub(current_date, 90) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -26,7 +26,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 90) and date_sub(current_date, 1)
-    and datecode in (select distinct refill_date from mon.SPARK_FT_ACTIVATION_BY_IDENTIF_DAY where refill_date between date_sub(current_date, 90) and date_sub(current_date, 1))
+    and datecode in (select distinct activation_date from mon.SPARK_FT_ACTIVATION_BY_IDENTIF_DAY where activation_date between date_sub(current_date, 90) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
