--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -3936,7 +3936,7 @@ crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_PARCS_SITE_DAY",
     cron = "0 35 */1 * * ?",
-    configFile = "/PROD/CONF/DD/load-spark-ft-parcs-site-day.conf.conf",
+    configFile = "/PROD/CONF/DD/load-spark-ft-parcs-site-day.conf",
     taskType = "BATCH",
     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
