correction des bugs kpi reg

--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-contract-snapshot-revenue.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-contract-snapshot-revenue.conf
@@ -43,7 +43,9 @@ flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
-
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
+flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.pre-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/prequery_spark_kpi_contract_snapshot_revenue.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_spark_kpi_contract_snapshot_revenue.hql"
