correction de l'erreur de customer base kpi v2

--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-customer-base.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-customer-base.conf
@@ -45,5 +45,5 @@ flux.has-post-queries = false
 
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/prequery_spark_kpi_customer_base.hql"
-flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT/compute_spark_kpi_customer_base.conf"
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT/compute_spark_kpi_customer_base.hql"
 
