--- a/PROD/CONF/FT_BALANCE_AGEE/load-ft-balance-agee.conf
+++ b/PROD/CONF/FT_BALANCE_AGEE/load-ft-balance-agee.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_FT_BALANCE_AGEE"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -40
+flux.slice-begin-value = -10
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -23,14 +23,11 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/prequery_FT_BALANCE_A
 
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TMP_CUST_CONTACT_ORDER"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_TMP_BALANCE_AGEE"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_BALANCE_AGEE"
+//flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_BALANCE_AGEE"
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TMP_CUST_CONTACT_ORDER.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TT_TMP_BALANCE_AGEE.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TT_BALANCE_AGEE.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_into_TT_BALANCE_AGEE.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_BALANCE_AGEE/compute_and_insert_FT_BALANCE_AGEE.hql"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_BALANCE_AGEE"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_BALANCE_AGEE"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_BALANCE_AGEE"
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 
