--- a/PROD/CONF/CTI/FT/load-spark-ft-a-appels-cti-count.conf
+++ b/PROD/CONF/CTI/FT/load-spark-ft-a-appels-cti-count.conf
@@ -9,6 +9,7 @@ flux.spark.setup-conf += {"key": "spark.sql.session.timeZone", "value": "WAT"}
 flux.spark.setup-var +=  {"key": "date_offset","value": "5"}
 flux.spark.setup-var +=  {"key": "table_type","value": "FTA"}
 flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_A_APPELS_CTI_COUNT"}
+flux.spark.setup-var +=  {"key": "seuil_nb_ligne","value": "10000"}
 
 flux.spark.setup-var +=  {"key": "insert_date_column","value": "INSERT_DATE"}
 
