--- a/PROD/CONF/FT_RATING_GROUP/load-spark-ft-rating-group.conf
+++ b/PROD/CONF/FT_RATING_GROUP/load-spark-ft-rating-group.conf
@@ -29,7 +29,7 @@ select
     if(count(*)=50,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 50) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from AGG.SPARK_FT_RATING_GROUP where event_date between date_sub(current_date, 50) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_RATING_GROUP where event_date between date_sub(current_date, 50) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -37,7 +37,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 50) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from AGG.SPARK_FT_RATING_GROUP where event_date between date_sub(current_date, 50) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_RATING_GROUP where event_date between date_sub(current_date, 50) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
