--- a/PROD/CONF/BDI/load-spark-it-bdi-crm-b2b.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-crm-b2b.conf
@@ -1,17 +1,17 @@
 flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_IT_BDI"
+flux.name = "LOAD_SPARK_IT_BDI_CRM_B2B"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/BDI/bdi_*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/BDI"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/BDI/CRM/B2B/OCM_CRM_BDI_B2B_*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/BDI/CRM/B2B/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/BDI/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/BDI"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/BDI/CRM/B2B/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/BDI/CRM/B2B/"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -21,7 +21,7 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI/insert_into_it_bdi.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/COLLECTE_BDI/insert_into_spark_it_bdi_crm_b2b.hql"
 //flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
@@ -31,4 +31,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=BDI"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_BDI"
+flux.hive.extra-conf += "--hivevar tt_table_name= CDR.tt_bdi_hlr"
