--- a/PROD/SCRIPTS/IT/BDI_FINALE/load-spark-bdi.conf
+++ b/PROD/SCRIPTS/IT/BDI_FINALE/load-spark-bdi.conf
@@ -1,35 +1,27 @@
-flux.yarn.queue = "compute"
+flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 flux.spark.setup-conf = []
-flux.setup-conf = []
-flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-flux.name = "LOAD_SPARK_IT_BDI_TABLE"
+flux.setup-conf = []
+
+
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled",
+ "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode",
+"value": "nonstrict"}
+
+flux.name = "LOAD_SPARK_IT_BDI"
+
 flux.has-date-processing = true
+
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=true
-flux.slice-state-query="""
-select
-    if(count(*)=7,'OK','NOK')
-from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from CDR.SPARK_IT_BDI where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
-"""
-flux.slice-has-filter-query = true
-flux.slice-filter-query = """
-select
-    date_format(datecode,'yyyy-MM-dd')
-from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from CDR.SPARK_IT_BDI where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
-"""
 flux.slice-date-format = "yyyy-MM-dd"
+
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
@@ -44,7 +36,6 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/prequery_spark_it_bdi.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_A_REFILL_REVENUE/prequery_spark_ft_a_refill_revenue.hql"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE"
