--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -19,7 +19,7 @@ select
     if(count(*)=7,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from CDR.SPARK_IT_BDI where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -27,7 +27,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from CDR.SPARK_IT_BDI where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
