automatiser several_subscriptions

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -53,11 +53,28 @@ crontasks +=
 
 
  //Chargement FT IN ZTE DATA
+   crontasks +=
+     {
+       instanceId = "LOAD_FT_DATA",
+       cron = "0 2 */1 * * ?",
+       configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
+       taskType = "HIVE",
+       taskQueue = "compute",
+       taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+       timeout = "65 minutes"
+       extraTaskParams : [
+         {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+         , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+       ]
+     }
+
+
+//Chargement FT SEVERAL_SUBSCRIPTIONS
 crontasks +=
   {
-    instanceId = "LOAD_FT_DATA",
+    instanceId = "LOAD_SEVERAL_SUBSCRIPTIONS",
     cron = "0 2 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
+    configFile = "/PROD/CONF/FT_A_REVENU_ASSURANCE/load-several-subscriptions.conf",
     taskType = "HIVE",
     taskQueue = "compute",
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -67,6 +84,9 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+
+
 
 
 
