--- a/PROD/CONF/BDI/load-spark-it-bdi-crm-b2b.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-crm-b2b.conf
@@ -31,4 +31,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=BDI"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name= CDR.tt_bdi_hlr"
+flux.hive.extra-conf += "--hivevar tt_table_name= CDR.tt_bdi_crm_b2b"
