modication du fichier de conf de l'export vers le dwh

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-rating-group.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-rating-group.conf
@@ -14,7 +14,6 @@ flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-date-format = "yyyy-MM-dd"
-
 flux.rdms.has-pre-queries = true
 
 flux.hive.has-pre-queries = true
@@ -24,8 +23,8 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 (SELECT COUNT(*) NBR FROM MON.FT_RATING_GROUP WHERE EVENT_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
-SELECT IF(A.NBR > 1000, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM AGG.SPARK_FT_RATING_GROUP WHERE SDATE='###SLICE_VALUE###') A
+SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
+(SELECT COUNT(*) NBR FROM MON.SPARK_FT_RATING_GROUP WHERE EVENT_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.95.20)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
