--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-rating-group.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-rating-group.conf
@@ -36,7 +36,7 @@ flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_RATING_GROUP WHERE EVENT_DATE='##
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_RATING_GROUP"
 flux.sqoop.export-rdms.dest-table = "MON.FT_RATING_GROUP"
-flux.sqoop.export-hive.staging-table = "SQ_SPARK_FT_RATING_GROUP"
+flux.sqoop.export-hive.staging-table = "SQ_FT_RATING_GROUP"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
