spool several_subscriptions

--- a/PROD/CONF/FT_A_REVENU_ASSURANCE/load-spark-ft-msc-cmr-bad-call.conf
+++ b/PROD/CONF/FT_A_REVENU_ASSURANCE/load-spark-ft-msc-cmr-bad-call.conf
@@ -1,18 +1,6 @@
 flux.yarn.queue = "compute"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE"
-flux.output-type = "HIVE"
-
-flux.spark.setup-conf = []
-
-flux.setup-conf = []
-
-flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-
-flux.spark.setup-var +=  {"key": "partition_name","value": "TRANSACTION_DATE"}
-flux.spark.setup-var +=  {"key": "date_offset","value": "20"}
 
 flux.name = "LOAD_SPARK_FT_MSC_CMR_BAD_CALL"
 
@@ -52,7 +40,15 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_A_REVENU_ASSURANCE/FT_MSC_CMR_BAD_CALL/insert_into_spark_ft_msc_cmr_bad_call.hql"
+
+flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
+
+
+flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
+flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 
