--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -85,7 +85,21 @@ crontasks +=
     ]
   }
 
-
+//Chargement SPARK_FT_MSC_CMR_BAD_CALL
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_MSC_CMR_BAD_CALL",
+    cron = "0 2 */1 * * ?",
+    configFile = "/PROD/CONF/FT_A_REVENU_ASSURANCE/load-spark-ft-msc-cmr-bad-call.conf",
+    taskType = "HIVE",
+    taskQueue = "compute",
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 
