update spark compute cron task et correction d'une erreur qui s'est propagé

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -51,7 +51,7 @@ crontasks +=
 //    cron = "0 2 */1 * * ?",
 //    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf",
 //    taskType = "BATCH",
-     taskQueue = "compute",
+ //    taskQueue = "compute",
 //    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
 //    timeout = "60 minutes"
 //    extraTaskParams : [
@@ -75,7 +75,7 @@ crontasks +=
 //    cron = "0 1 */1 * * ?",
 //    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms.conf",
 //    taskType = "BATCH",
-     taskQueue = "compute",
+//     taskQueue = "compute",
 //    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
 //    timeout = "60 minutes"
 //    extraTaskParams : [
