update spark compute cron task et correction d'une erreur qui s'est propagé

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1632,7 +1632,7 @@ crontasks +=
 //    cron = "0 44/30 * * * ?",
 //    configFile = "/PROD/CONF/MONITORING/compute_ft_14_daily_status.conf",
 //    taskType = "BATCH",
-     taskQueue = "compute",
+  //   taskQueue = "compute",
 //    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
 //    timeout = "55 minutes"
 //    extraTaskParams : [
