--- a/PROD/CONF/BDI/load-spark-it-bdi-zsmart-to-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-zsmart-to-bdi.conf
@@ -1,17 +1,21 @@
 flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
+flux.spark.setup-conf = []
+flux.setup-conf = []
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.name = "LOAD_SPARK_IT_BDI_ZSMART"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/BDI/HLR/MemExpFile_HSS9860_1200_*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/BDI/HLR/"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/BDI/ZSMART/ZsmartToBDI_*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/BDI/ZSMART/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/BDI/HLR/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/BDI/HLR/"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/BDI/ZSMART/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/BDI/ZSMART/"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -21,7 +25,7 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/COLLECTE_BDI/insert_into_spark_it_bdi_hlr.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/COLLECTE_BDI/insert_into_spark_it_bdi_zsmart.hql"
 //flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
