--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -839,7 +839,7 @@ crontasks +=
     cron = "0 42 0 */1 * ?",
     configFile = "/PROD/CONF/analyze_compute_statistics.conf",
     taskType = "HIVE",
-//     taskQueue = "compute",
+     taskQueue = "compute",
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
