--- a/PROD/CONF/BDI/load-spark-it-bdi-crm-b2c.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-crm-b2c.conf
@@ -1,5 +1,9 @@
 flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
+flux.spark.setup-conf = []
+flux.setup-conf = []
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.name = "LOAD_SPARK_IT_BDI_CRM_B2C"
 
