--- a/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
+++ b/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
@@ -1,5 +1,9 @@
 flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
+flux.spark.setup-conf = []
+flux.setup-conf = []
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.input-type = "HIVE" // Possible values are HDFS, HIVE
 flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
