--- a/PROD/CONF/SPOOL/load-spark-spool-cbm-activation-location-daily.conf
+++ b/PROD/CONF/SPOOL/load-spark-spool-cbm-activation-location-daily.conf
@@ -46,6 +46,7 @@ flux.has-post-queries = false
 flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/prequery_spool_cbm_activation_location_daily.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/compute_and_insert_into_spool_cbm_activation_location_daily.hql"
