correction ft_a_marketing_datamart

--- a/PROD/CONF/DATAMART/load-spark-ft-a-marketing-datamart-daily.conf
+++ b/PROD/CONF/DATAMART/load-spark-ft-a-marketing-datamart-daily.conf
@@ -50,6 +50,41 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/DATAMART/FT_A_MARKETING_DATAMART_DAILY/prequery_spark_ft_a_marketing_datamart_daily.hql
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/DATAMART/FT_A_MARKETING_DATAMART_DAILY/prequery_spark_ft_a_marketing_datamart_daily.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/DATAMART/FT_A_MARKETING_DATAMART_DAILY/compute_and_insert_into_spark_ft_a_marketing_datamart_daily.hql
+flux.exec-queries += "/PROD/SCRIPTS/FT/DATAMART/FT_A_MARKETING_DATAMART_DAILY/compute_and_insert_into_spark_ft_a_marketing_datamart_daily.hql"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
