--- a/PROD/CONF/BDI/load-spark-it-bdi-hlr.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-hlr.conf
@@ -28,9 +28,10 @@ flux.exec-query.execution.mode = "JDBC"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/COLLECTE_BDI/insert_into_spark_it_bdi_hlr.hql"
 //flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=BDI"
