--- a/PROD/CONF/IN_ZTE/CBM/CBM_AGREGAT/load-spark-ft-cbm-mou-arpu.conf
+++ b/PROD/CONF/IN_ZTE/CBM/CBM_AGREGAT/load-spark-ft-cbm-mou-arpu.conf
@@ -40,8 +40,11 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_ARPU_MOU/prequery_spark_ft_cbm_mou_arpu.hql"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/CBM_ARPU_MOU/compute_and_insert_into_ft_cbm_mou_arpu.hql"
