--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -609,7 +609,37 @@ crontasks +=
                          , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
                        ]
                      }
+crontasks +=
+                     {
+                       instanceId = "SQ_EXPORT_SPARK_FT_A_RAF_OTT",
+                       cron = "0 45 */1 * * ?",
+                       configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-raf-ott.conf",
+                       taskType = "SQOOP",
+                        taskQueue = "compute",
+                       taskLauncher = ${SQOOP_LAUNCHER}
+                       timeout = "240 minutes"
+                       extraTaskParams : [
+                         {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                         , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                         , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                       ]
+                     }
 
+ crontasks +=
+                      {
+                        instanceId = "SQ_EXPORT_SPARK_FT_A_RAF_SUBSCRIPTION_DD",
+                        cron = "0 45 */1 * * ?",
+                        configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-raf-suscription-dd.conf",
+                        taskType = "SQOOP",
+                         taskQueue = "compute",
+                        taskLauncher = ${SQOOP_LAUNCHER}
+                        timeout = "240 minutes"
+                        extraTaskParams : [
+                          {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                          , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                          , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                        ]
+                      }
 
 
 
