sqoop export refill

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select refill_id,refill_time,receiver_msisdn,receiver_profile,receiver_imsi,sender_msisdn,sender_profile,refill_mean,refill_type,refill_bonus,termination_ind,refill_code,refill_description,receiver_operator_code,sender_operator_code,sender_category,receiver_category,sender_pre_bal,sender_post_bal,receiver_pre_bal,receiver_post_bal,entry_date,original_file_name,insert_date,refill_date,null as commission FROM MON.SPARK_FT_REFILL WHERE refill_date='###SLICE_VALUE###'"
+flux.sqoop.query = "select * FROM MON.SPARK_FT_REFILL WHERE refill_date='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_REFILL"
 flux.sqoop.export-rdms.dest-table = "MON.FT_REFILL"
