dédoublonnage CDR.SPARK_IT_BDI_ART, optimisation en ajoutant une table temporaire = modifications des dates de partitions des tables dépendantes

--- a/PROD/CONF/BDI/load-spark-it-bdi-art.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-art.conf
@@ -49,6 +49,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/prequery_spark_it_bdi_art.hql
 flux.inline.exec-queries +="truncate table TMP.TT_OM_PHOTO_CONFORMITE"
 flux.inline.exec-queries +="truncate table TMP.TT_ZSMART_CONFORMITE"
 flux.inline.exec-queries +="truncate table TMP.TT_MYOMID_CONFORMITE"
+flux.inline.exec-queries +="truncate table TMP.TT_IT_BDI_ART1"
 
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
@@ -57,4 +58,5 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_zsmart_conformite.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_om_photo_conformite.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_myomid_conformite.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_tt_it_bdi_art1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_ART/insert_into_spark_it_bdi_art.hql"
