update ft daily status

--- a/PROD/CONF/BDI/load-spark-ft-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-ft-bdi.conf
@@ -49,10 +49,14 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI/prequery_spark_ft_bdi.hql"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_II"
 
-
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI/insert_into_tt_ft_bdi.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI/insert_into_tt_ft_bdi_II.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI/insert_into_spark_ft_bdi.hql"
