--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1224,6 +1224,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50598"}
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
