update ft refill

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select * FROM MON.SPARK_FT_REFILL WHERE refill_date='###SLICE_VALUE###'"
+flux.sqoop.query = "select REFILL_ID, REFILL_DATE, REFILL_TIME, RECEIVER_MSISDN, RECEIVER_PROFILE, RECEIVER_IMSI, SENDER_MSISDN, SENDER_PROFILE, REFILL_MEAN, REFILL_TYPE, REFILL_AMOUNT, REFILL_BONUS, TERMINATION_IND, ENTRY_DATE, ORIGINAL_FILE_NAME, INSERT_DATE, REFILL_CODE, REFILL_DESCRIPTION, RECEIVER_OPERATOR_CODE, SENDER_OPERATOR_CODE, SENDER_CATEGORY, RECEIVER_CATEGORY, SENDER_PRE_BAL, SENDER_POST_BAL, RECEIVER_PRE_BAL, RECEIVER_POST_BAL, COMMISSION FROM MON.SPARK_FT_REFILL WHERE refill_date='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_REFILL"
 flux.sqoop.export-rdms.dest-table = "MON.FT_REFILL"
