--- a/PROD/CONF/BDI/load-spark-ft-bdi-art.conf
+++ b/PROD/CONF/BDI/load-spark-ft-bdi-art.conf
@@ -48,6 +48,7 @@ flux.has-post-queries = false
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/prequery_spark_ft_bdi_art.hql"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_ART"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_II_ART"
+flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_III_ART"
 
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
@@ -55,4 +56,5 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ft_bdi_art.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ft_bdi_II_art.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ft_bdi_III_art.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_spark_ft_bdi_art.hql"
