--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-marketing-datamart_daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-marketing-datamart_daily.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "compute"
 flux.log-level = "ERROR"
 
-flux.name = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART"
+flux.name = "SQ_EXPORT_SPARK_FT_A_MARKETING_DATAMART_DAILY"
 
 flux.type = "EXPORT"
 
@@ -25,7 +25,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.SPARK_FT_A_MARKETING_DATAMART_DAILY WHERE event_date='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.SPARK_FT_A_MARKETING_DATAMART_DAILY WHERE event_date='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
