--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -740,3 +740,21 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+//  EXPORT sqoop-export-spark-ft-marketing-datamart.conf
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_A_MARKETING_DATAMART_DAILY",
+    cron = "0 45 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-marketing-datamart_daily.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "240 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
