--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -292,6 +292,21 @@ crontasks +=
     ]
   }
 
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_CONSO_MSISDN_MONTH",
+    cron = "0 30 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-conso-msisdn-month.conf",
+    taskType = "SQOOP",
+     taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "240 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
 
 crontasks +=
   {
