--- a/PROD/CONF/SQOOP/sqoop-export-ft-conso-msisdn-month.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-conso-msisdn-month.conf
@@ -28,7 +28,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_CONSO_MSISDN_MONTH WHERE EVENT_MONTH= REGEXP_REPLACE('###SLICE_VALUE###', '-', '')))
+(SELECT COUNT(*) NBR FROM MON.FT_CONSO_MSISDN_MONTH WHERE EVENT_MONTH= REGEXP_REPLACE('###SLICE_VALUE###', '-', ''))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
@@ -40,8 +40,8 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT
- CONCAT_WS('', SUBSTRING(EVENT_MONTH, 1, 4), SUBSTRING(EVENT_MONTH, 6, 2))	EVENT_MONTH,
+flux.sqoop.query = """
+SELECT CONCAT_WS('', SUBSTRING(EVENT_MONTH, 1, 4), SUBSTRING(EVENT_MONTH, 6, 2))	EVENT_MONTH,
  MSISDN	,
  FORMULE	,
  CONSO	,
@@ -170,11 +170,12 @@ flux.sqoop.query = "SELECT
  SVA_BILLED_TEL_CONSO	,
  SVA_SMS_COUNT	,
  SVA_SMS_CONSO
-FROM MON.SPARK_FT_CONSO_MSISDN_MONTH WHERE EVENT_MONTH='###SLICE_VALUE###'"
+FROM MON.SPARK_FT_CONSO_MSISDN_MONTH WHERE EVENT_MONTH='###SLICE_VALUE###'
+"""
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_CONSO_MSISDN_MONTH "
+flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_CONSO_MSISDN_MONTH"
 flux.sqoop.export-rdms.dest-table = "MON.FT_CONSO_MSISDN_MONTH"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_CONSO_MSISDN_MONTH"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_SPARK_FT_CONSO_MSISDN_MONTH"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
