chaine aboutissant a bdi améliorée à partir de it_bdi_art et ft_bdi_art

--- a/PROD/CONF/BDI/load-spark-ft-bdi-art.conf
+++ b/PROD/CONF/BDI/load-spark-ft-bdi-art.conf
@@ -49,6 +49,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/prequery_spark_ft_bdi_
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_ART"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_II_ART"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_III_ART"
+flux.inline.exec-queries +="truncate table TMP.TT_LIGNE_ANOMALIE"
 
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
@@ -58,3 +59,6 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ft_bdi_art.
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ft_bdi_II_art.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ft_bdi_III_art.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_spark_ft_bdi_art.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_tt_ligne_anolmalie.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_spark_it_bdi_ligne_flotte_anomalie.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI_ART/insert_into_sparl_it_bdi_ameliore.hql"
