mise en place du job extra pour l'export de global activity

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -409,6 +409,22 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+  crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_GLOBAL_ATV_DAILY_EXTRA",
+    cron = "0 45 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily-extra.conf",
+    taskType = "SQOOP",
+     taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_REFILL_SLICE_MKT",
