--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily-extra.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily-extra.conf
@@ -21,11 +21,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS') and source_data  in ('FT_SUBS_RETAIL_ZEBRA','FT_REFILL'))
 """
 flux.hive.pre-exec-queries += """
-SELECT IF(A.NBR >=11, 'OK', 'NOK') FROM
-(SELECT COUNT(DISTINCT SOURCE_DATA) NBR  FROM AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
+SELECT IF(A.NBR =2, 'OK', 'NOK') FROM
+(SELECT COUNT(DISTINCT SOURCE_DATA) NBR  FROM AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###' and source_data  in ('FT_SUBS_RETAIL_ZEBRA','FT_REFILL')) A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,11 +33,11 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,SUM(RATED_COUNT) RATED_COUNT,SUM(RATED_VOLUME) RATED_VOLUME,SUM(TAXED_AMOUNT) TAXED_AMOUNT,SUM(UNTAXED_AMOUNT) UNTAXED_AMOUNT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE from agg.spark_ft_global_activity_daily where transaction_date='###SLICE_VALUE###' group by TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE"
+flux.sqoop.query = "select TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,SUM(RATED_COUNT) RATED_COUNT,SUM(RATED_VOLUME) RATED_VOLUME,SUM(TAXED_AMOUNT) TAXED_AMOUNT,SUM(UNTAXED_AMOUNT) UNTAXED_AMOUNT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE from agg.spark_ft_global_activity_daily where transaction_date='###SLICE_VALUE###' and source_data  in ('FT_SUBS_RETAIL_ZEBRA','FT_REFILL') group by TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GLOBAL_ATV_DAILY"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GLOBAL_ATV_DAILY_EX"
 flux.sqoop.export-rdms.dest-table = "MON.FT_GLOBAL_ACTIVITY_DAILY"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_GLOBAL_ACTIVITY_DAILY"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_GLOBAL_ACTIVITY_DAILY_EXTRA"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
