bult script for BRI SPOOL

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -836,3 +836,35 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_LOCATION_RETAILLER_TMP",
+    cron = "0 15 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-location-retailler-tmp.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "240 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_RETAIL_BASE_DETAILLANT",
+    cron = "0 13 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-retail-base-detaillant.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "240 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
