bult script for BRI SPOOL

--- a/PROD/CONF/SPOOL/load-spark-tf-base-group-conso-month.conf
+++ b/PROD/CONF/SPOOL/load-spark-tf-base-group-conso-month.conf
@@ -42,9 +42,9 @@ flux.slice-date-format = "yyyy-MM"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
-
+flux.inline.exec-queries += "ALTER TABLE MON.SPARK_TF_SPECIFIC_SUBSCRIPTION_MONTH DROP PARTITION(EVENT_MONTH = '###SLICE_VALUE###')"
+flux.inline.exec-queries += "ALTER TABLE MON.SPARK_TF_GLOBAL_CONSO_MSISDN_MONTH DROP PARTITION(EVENT_MONTH = '###SLICE_VALUE###')"
 flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BASE_GROUPE_CONSO_LOCALISATION/prequery_spool_tf_base_group_conso_month.hql"
-
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BASE_GROUPE_CONSO_LOCALISATION/compute_and_insert_into_spark_tf_specific_subscription_month_bri.hql"
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BASE_GROUPE_CONSO_LOCALISATION/compute_and_insert_into_spool_tf_global_conso_msisdn_month.hql"
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BASE_GROUPE_CONSO_LOCALISATION/compute_and_insert_into_spool_tf_base_group_conso_month.hql"
