update ref sites

--- a/PROD/CONF/REF/load-spark-it-ref-sites.conf
+++ b/PROD/CONF/REF/load-spark-it-ref-sites.conf
@@ -25,8 +25,8 @@ flux.hdfs.dest-temp-tt-dir = "/PROD/TT/REF_SITES"
 flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/REF_SITES/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/REF_SITES"
-flux.hdfs.dest.has-sub-dir = false
-flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
+flux.hdfs.dest.has-sub-dir = true
+flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{2})"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
