--- a/PROD/CONF/DD/load-spark-ft-stkaprim-refill-type.conf
+++ b/PROD/CONF/DD/load-spark-ft-stkaprim-refill-type.conf
@@ -44,4 +44,4 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_STKAPRIM_REFILL_TYPE/compute_and_insert_into_spark_ft_stkaprim_refill_type _rech.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_STKAPRIM_REFILL_TYPE/compute_and_insert_into_spark_ft_stkaprim_refill_type _solde1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_STKAPRIM_REFILL_TYPE/compute_and_insert_into_spark_ft_stkaprim_refill_type _solde2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_STKAPRIM_REFILL_TYPE/compute_and_insert_into_spark_ft_stkaprim_refill_type _partn.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_STKAPRIM_REFILL_TYPE/compute_and_insert_into_spark_ft_stkaprim_refill_type_partn.hql"
