modif adding temporary function to sphere traffic month tables

--- a/PROD/CONF/FT_A_SUBS_SPHERE_TRAFFIC_MONTH/load-spark-ft-a-subs-sphere-traffic-month.conf
+++ b/PROD/CONF/FT_A_SUBS_SPHERE_TRAFFIC_MONTH/load-spark-ft-a-subs-sphere-traffic-month.conf
@@ -44,7 +44,7 @@ flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
 
-flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FUNCTION FN_NNP_SIMPLE_DESTINATION"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS  FN_NNP_SIMPLE_DESTINATION"
 
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 
