Flux name absent dans le fichier de conf utilisé par bicec trans

--- a/PROD/CONF/OM/load-spark-ttvmw-om-bicec-trans.conf
+++ b/PROD/CONF/OM/load-spark-ttvmw-om-bicec-trans.conf
@@ -7,7 +7,7 @@ flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "no
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "false"}
 
-flux.name = "c"
+flux.name = "LOAD_SPARK_TTVMW_OM_BICEC_TRANS"
 
 flux.has-date-processing = true
 
