--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-adustment-revenue.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-adustment-revenue.conf
@@ -23,7 +23,7 @@ flux.name = "LOAD_SPARK_KPI_MKT_V2_IT_ZTE_ADJUSTMENT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -21
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -50,10 +50,10 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_ft_adjustement.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/prequery_spark_kpi_adustment_revenue.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.exec-queries += "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-adustment-revenue.conf"
+flux.exec-queries += "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute_spark_kpi_adustment_revenue.hql"
