--- a/PROD/CONF/FT_SITE_TRAFFIC_USAGE_DAILY/load-spark-ft-site-traffic-usage-daily.conf
+++ b/PROD/CONF/FT_SITE_TRAFFIC_USAGE_DAILY/load-spark-ft-site-traffic-usage-daily.conf
@@ -36,6 +36,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_SITE_TRAFFIC_USAGE_DAILY/prequery_spark_ft_site_traffic_usage_daily.hqll"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_SITE_TRAFFIC_USAGE_DAILY/prequery_spark_ft_site_traffic_usage_daily.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_SITE_TRAFFIC_USAGE_DAILY/compute_and_insert_into_spark_ft_site_traffic_usage_daily.hql"
