Migration MON.SPARK_TF_DASHBRD_CMO_VOICESMS_REVM

--- a/PROD/CONF/SPOOL/load-spark-spool-bri-revenu-data-par-site-detail.conf
+++ b/PROD/CONF/SPOOL/load-spark-spool-bri-revenu-data-par-site-detail.conf
@@ -21,7 +21,7 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=false
+flux.slice-has-state-query=true
 flux.slice-state-query="""
 select  if(count(*)=18,'OK','NOK')
 
@@ -29,7 +29,7 @@ from dim.dt_dates
 where datecode between date_sub(current_date, 18) and date_sub(current_date, 1)
     and datecode in (select distinct BASE_MONTH from SPOOL.SPOOL_BRI_REVENU_DATA_PAR_SITE_DETAIL where BASE_MONTH between date_sub(current_date, 18) and date_sub(current_date, 1))
 """
-flux.slice-has-filter-query = false
+flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM')
@@ -45,4 +45,4 @@ flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BRI_REVENU_DATA_PAR_SITE_DETAIL/prequery_spool_bri_revenu_data_par_site_detail.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BRI_REVENU_DATA_PAR_SITE_DETAIL/compute_and_insert_insert_into_spool_bri_revenu_data_par_site_detail.hql"
+flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BRI_REVENU_DATA_PAR_SITE_DETAIL/compute_and_insert_into_spool_bri_revenu_data_par_site_detail.hql"
