Migration MON.SPARK_TT_ANALYSE_DECON_GLOBAL_CONSO1 (suite)

--- a/PROD/CONF/IN_ZTE/FT/BRI/load-spark-tt-analyse-decon-subsc-spec1.conf
+++ b/PROD/CONF/IN_ZTE/FT/BRI/load-spark-tt-analyse-decon-subsc-spec1.conf
@@ -21,7 +21,7 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=true
+flux.slice-has-state-query= true
 flux.slice-state-query="""
 select
     if(count(distinct date_format(datecode,'yyyy-MM')) = 2, 'OK', 'NOK')
