--- a/PROD/CONF/SPOOL/load-spark-ft-other-party-site-traffic.conf
+++ b/PROD/CONF/SPOOL/load-spark-ft-other-party-site-traffic.conf
@@ -16,12 +16,12 @@ flux.name = "LOAD_SPARK_FT_OTHER_PARTY_SITE_TRAFFIC"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -18
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=true
+flux.slice-has-state-query= true
 flux.slice-state-query="""
 select
     if(count(*)=18,'OK','NOK')
