--- a/PROD/CONF/SPOOL/load-spark-spool-bri-msisdn-et-localisation-en-interco.conf
+++ b/PROD/CONF/SPOOL/load-spark-spool-bri-msisdn-et-localisation-en-interco.conf
@@ -21,7 +21,7 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=true
+flux.slice-has-state-query= true
 flux.slice-state-query="""
 select
     if(count(distinct date_format(datecode,'yyyy-MM')) = 4, 'OK', 'NOK')
@@ -45,5 +45,5 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/FT_OTHER_PARTY_SITE_TRAFFIC/prequery_spool_bri_msisdn_et_localisation_en_interco.hql"
-flux.exec-queries += "/PROD/SCRIPTS/SPOOL/FT_OTHER_PARTY_SITE_TRAFFIC/compute_and_insert_into_spool_bri_msisdn_et_localisation_en_interco.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BRI_MSISDN_ET_LOCALISATION_EN_INTERCO/prequery_spool_bri_msisdn_et_localisation_en_interco.hql"
+flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BRI_MSISDN_ET_LOCALISATION_EN_INTERCO/compute_and_insert_into_spool_bri_msisdn_et_localisation_en_interco.hql"
