--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -5177,7 +5177,7 @@ crontasks +=
   }
 
 
-crontasks +=
+crontasks +=LOAD_SPARK_SPOOL_BRI_MSISDN_ET_LOCALISATION_EN_INTERCO
   {
     instanceId = "LOAD_SPARK_SPOOL_BRI_MSISDN_ET_LOCALISATION_EN_INTERCO",
     cron = "0 31 */1 * * ?",
