--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-activation_by_identif_day.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-activation_by_identif_day.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select ACTIVATION_DATE, ACTIVATION_DATE,IDENTIFICATEUR,MSISDN_COUNT,INSERT_DATE FROM MON.SPARK_FT_ACTIVATION_BY_IDENTIF_DAY WHERE ACTIVATION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "select ACTIVATION_DATE,IDENTIFICATEUR,MSISDN_COUNT,INSERT_DATE FROM MON.SPARK_FT_ACTIVATION_BY_IDENTIF_DAY WHERE ACTIVATION_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_ACTIVATION_BY_IDENTIF_DAY"
 flux.sqoop.export-rdms.dest-table = "MON.FT_ACTIVATION_BY_IDENTIF_DAY"
